# voting-system

./: README.md  package-lock.json
anchor/: Anchor.toml
anchor/programs/votingsystem/: Cargo.toml
anchor/programs/votingsystem/src/: lib.rs
anchor/src/: index.ts  votingsystem-exports.ts
anchor/tests/: votingsystem.spec.ts
src/app/: layout.tsx
src/app/api/vote/: route.ts
src/app/votingsystem/: page.tsx
src/components/ui/: ui-layout.tsx
src/components/votingsystem/: votingsystem-data-access.tsx  votingsystem-feature.tsx  votingsystem-ui.tsx
